tests/fsharp/typecheck/sigs/neg108.bsl

neg108.fs(5,3,5,15): typecheck error FS3238: This type is not an attribute
