tests/fsharp/typecheck/sigs/neg108.fs
module Neg108

type Test = Test of Unit
let test : Test = Test
